--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <title>Local Zoo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="build/js/vendor.min.js"></script>
-    <link rel="stylesheet" href="build/css/vendor.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="resources/js/scripts.js"></script>
+    <link rel="stylesheet" href="resources/css/styles.css">
+
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
+    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
 
